--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Aplicaciones Web</h1>
-        <p><b>Diaz Bazan Angel <br> IC-31M <br> Universidad Tecnológica de Nezahualcóyotl</b></p>
+        <p><b>Diaz Bazan Angel<br> IC-31M <br> Universidad Tecnológica de Nezahualcóyotl</b></p>
     </header>
     <hr>
     <div>
@@ -20,6 +20,12 @@
             </li>
             <li>
                 <a href="tarea2.html">Tarea 2</a>
+            </li>
+        </ul>
+        <ul>
+            <p><strong>Recuperacion</strong></p>
+            <li>
+                <a href="recu.html">Recuperacion</a>
             </li>
         </ul>
     </div>
