--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <li>
                 <a href="tarea2.html">Tarea 2</a>
             </li>
+            <li>
+                <a href="exemane2.html">Tarea 3</a>
+            </li>
         </ul>
         <ul>
             <p><strong>Recuperacion</strong></p>
