--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
             <li>
                 <a href="tarea2.html">Tarea 2</a>
             </li>
-            <li>
-                <a href="exemane2.html">Tarea 3</a>
-            </li>
         </ul>
         <ul>
             <p><strong>Recuperacion</strong></p>
@@ -31,6 +28,11 @@
                 <a href="recu.html">Recuperacion</a>
             </li>
         </ul>
+        <ul>
+            <p><strong>Tareas 2 parcial</strong></p>
+            <li>
+                <a href="exemane2.html">Tarea 1</a>
+            </li>
     </div>
 </body>
 </html>
